# Stream

./: CMakeLists.txt  LICENSE  README.md  annotated.html  classes.html  concepts.html  dir_07db626c45ea25c07b7068518579809d.html  dir_07db626c45ea25c07b7068518579809d_dep.dot  dir_07db626c45ea25c07b7068518579809d_dep.map  dir_07db626c45ea25c07b7068518579809d_dep.md5  dir_23c40cf1999235333f834448ab1166cf.html  dir_23c40cf1999235333f834448ab1166cf_dep.dot  dir_23c40cf1999235333f834448ab1166cf_dep.map  dir_23c40cf1999235333f834448ab1166cf_dep.md5  dir_328c625d6c420d3532f3f0cf6ee81b8b.html  dir_328c625d6c420d3532f3f0cf6ee81b8b_dep.map  dir_328c625d6c420d3532f3f0cf6ee81b8b_dep.md5  dir_342969e1270718e10f4dd54ae56a49a4.html  dir_342969e1270718e10f4dd54ae56a49a4_dep.map  dir_342969e1270718e10f4dd54ae56a49a4_dep.md5  dir_3b5893297b63208e3967eb67e277a045.html  dir_3b5893297b63208e3967eb67e277a045_dep.map  dir_3b5893297b63208e3967eb67e277a045_dep.md5  dir_43e0a1f539e00dcfa1a6bc4d4fee4fc2.html  dir_507acf48ac41e7159f0a1b442db86079.html  dir_507acf48ac41e7159f0a1b442db86079_dep.dot  dir_507acf48ac41e7159f0a1b442db86079_dep.map  dir_507acf48ac41e7159f0a1b442db86079_dep.md5  dir_59c62c22e07b37fbb36a32a7197f962a.html  dir_59c62c22e07b37fbb36a32a7197f962a_dep.map  dir_59c62c22e07b37fbb36a32a7197f962a_dep.md5  dir_5d6e449c1d371c5fd493a898da3fe119.html  dir_5d6e449c1d371c5fd493a898da3fe119_dep.dot  dir_5d6e449c1d371c5fd493a898da3fe119_dep.map  dir_5d6e449c1d371c5fd493a898da3fe119_dep.md5  dir_7fd754427437d60008af87bf9ddaed42.html  dir_7fd754427437d60008af87bf9ddaed42_dep.dot  dir_7fd754427437d60008af87bf9ddaed42_dep.map  dir_7fd754427437d60008af87bf9ddaed42_dep.md5  dir_85765867c4ca5aaef0a6ffe8f5f6276b.html  (+58 more)
.github/workflows/: main.yml
d0/d04/: classStream_1_1Buffer.html
d0/d31/: classStream_1_1Buffer__inherit__graph.dot  classStream_1_1Buffer__inherit__graph.map  classStream_1_1Buffer__inherit__graph.md5
d0/d57/: classStream_1_1OutputFilter.html
d0/d59/: Transform_8cpp_source.html
d0/d98/: Output_8cpp_source.html
d0/dc5/: structStream_1_1BufferOutput_1_1Exception.html
d0/de9/: classStream_1_1TransformOutput-members.html
d1/d07/: Transparent_8tpp_source.html  classStream_1_1Output__inherit__graph.dot  classStream_1_1Output__inherit__graph.map  classStream_1_1Output__inherit__graph.md5
d1/d30/: structstd_1_1is__error__code__enum_3_01Stream_1_1Output_1_1Exception_1_1Code_01_4.html
d1/d36/: Input_8hpp_source.html
d1/d52/: classStream_1_1TransparentOutput.html
d1/d93/: conceptStream_1_1Char.html
d1/da5/: structStream_1_1Input_1_1Exception-members.html
d1/db1/: classStream_1_1Socket.html
d1/dcd/: classStream_1_1TransparentInput.html
d1/dde/: structStream_1_1Pipe_1_1Exception__inherit__graph.dot  structStream_1_1Pipe_1_1Exception__inherit__graph.map  structStream_1_1Pipe_1_1Exception__inherit__graph.md5
d1/dff/: classStream_1_1TransformOutput.html
d2/d11/: classStream_1_1File__inherit__graph.dot  classStream_1_1File__inherit__graph.map  classStream_1_1File__inherit__graph.md5
d2/d14/: Transparent_8cpp_source.html
d2/d73/: structStream_1_1Socket_1_1Inet-members.html
d2/d85/: structStream_1_1Input_1_1Exception.html
d2/db0/: structStream_1_1BufferInput_1_1Exception-members.html
d2/dc2/: classStream_1_1BufferInput.html
d2/dce/: classsockaddr__inherit__graph.dot  classsockaddr__inherit__graph.map  classsockaddr__inherit__graph.md5
d2/def/: structStream_1_1Socket_1_1Address_1_1Inet__inherit__graph.dot  structStream_1_1Socket_1_1Address_1_1Inet__inherit__graph.map  structStream_1_1Socket_1_1Address_1_1Inet__inherit__graph.md5
d2/df1/: structStream_1_1Socket_1_1Address_1_1Exception-members.html
d3/d1c/: classStream_1_1TransparentInput-members.html
d3/d2f/: classStream_1_1InputFilter.html
d3/d34/: conceptStream_1_1Deserializable.html
d3/d3e/: structStream_1_1Buffer_1_1Exception-members.html
d3/d76/: classStream_1_1Input__inherit__graph.dot  classStream_1_1Input__inherit__graph.map  classStream_1_1Input__inherit__graph.md5
d3/d86/: structStream_1_1Socket_1_1Exception.html
d3/d8a/: structStream_1_1FileOutput_1_1Exception.html
d3/db1/: conceptStream_1_1SignedInt.html
d3/dca/: structstd_1_1is__error__code__enum_3_01Stream_1_1Buffer_1_1Exception_1_1Code_01_4__inherit__graph.dot  structstd_1_1is__error__code__enum_3_01Stream_1_1Buffer_1_1Exception_1_1Code_01_4__inherit__graph.map  structstd_1_1is__error__code__enum_3_01Stream_1_1Buffer_1_1Exception_1_1Code_01_4__inherit__graph.md5
d3/dd5/: structStream_1_1BufferOutput_1_1Exception-members.html
d3/ddf/: Output_8h_source.html
d3/de2/: classStream_1_1Pipe.html
d3/dfd/: classStream_1_1File-members.html
d4/d1b/: structStream_1_1File_1_1Exception.html
d4/d34/: InOut_8h_source.html
d4/d5f/: Pipe_8h_source.html
d4/d6d/: conceptStream_1_1Integer.html
d4/d91/: conceptStream_1_1Extractable.html
d4/d9c/: structStream_1_1SocketInput_1_1Exception__inherit__graph.map  (+1 more)
doc/: doxygen.cfg
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_0.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_7.js  classes_8.js  classes_9.js  concepts_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  namespaces_0.js  search.css  searchdata.js
src/: Buffer.cpp  Buffer.tpp  File.cpp  InOut.cpp  InOut.hpp  InOut.tpp  Input.cpp  Input.hpp  Input.tpp  InputFile.cpp  Output.cpp  Output.hpp  Output.tpp  OutputFile.cpp  Pipe.cpp  Raw.cpp  Socket.cpp  Text.cpp  Text.tpp  Transform.cpp  Transparent.cpp
test/: CMakeLists.txt
test/Concept/: CMakeLists.txt
test/Concept/src/: Char.cpp  HasExtraction.cpp  Integer.cpp  SignedInteger.cpp  Source.cpp  UnsignedInteger.cpp
test/Text/: CMakeLists.txt
test/Text/src/: Float.cpp  Integer.cpp  Line.cpp
test/inc/: Util.hpp
test/inc/Stream/Test/: Util.hpp
test/inc/StreamTest/: Holder.cp  Util.hpp
test/include/: Util.h  Util.hpp
test/src/: Util.cpp
(+205 files in other folders)
